<resources>
    <string name="app_name">Statusify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="foldername">statusify</string>
    <string name="app_version">App Version 1.0</string>
    <string name="WappFragment">Status Feeds</string>
    <string name="SavedFragment">Downloads</string>
    <string name="SettingsFragment">Settings</string>
    <string name="FavouriteFragment">Favourites</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Toolbar_Title">Status Feeds</string>
    <string name="Toolbar_subTitle_WA">WhatsApp</string>
    <string name="favourites">Favourites</string>
    <string name="your">Your</string>
    <string name="no_favorite_status_found">No Favorite Status Found</string>
    <string name="no_downloaded_status_found">No Downloaded Status Found</string>
    <string name="downloads">Downloads</string>
    <string name="recent">Recent</string>
    <string name="updates">Updates</string>
    <string name="all">All</string>
    <string name="feeds">Feeds</string>

    <!--    No status    -->
    <string name="no_status_found">NO Status Found</string>
    <string name="go_to_whatsapp_and_view_status">Go to WhatsApp and view status</string>
    <string name="go_to_whatsapp_business_and_view_status">Go to WhatsApp Business and view status</string>

    <!--    app not installed   -->
    <string name="whatsapp_not_found">WhatsApp Not Found</string>
    <string name="whatsapp_business_not_found">WhatsApp Business\nNot Found</string>
    <string name="please_install_the_app">Please Install The App</string>

    <string name="alertBox_deletebtn">Delete</string>
    <string name="alertBox_cancelbtn">Cancel</string>
    <string name="alertBox_title">Are you sure ?</string>

    <string name="appType">WhatsApp</string>
</resources>