<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.WappFragment"
    android:id="@+id/transitionsContainer"
    android:background="@drawable/main_activity_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/recentstile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/poppins_extralight"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="@drawable/underline"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppinslight"
                android:layout_marginRight="10dp"
                android:text="@string/updates"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecentStatusRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recentstile"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>
    <LinearLayout
        android:transitionName="navBarTransition"
        android:id="@+id/navBar"
        android:layout_marginTop="@dimen/_9sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recentstile">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/allfeedtitle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp">
            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinslight"
                    android:text="@string/all"
                    android:textColor="@color/white"
                    android:id="@+id/allTextView"
                    android:textStyle="bold"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_2sdp"
                    android:background="@drawable/underline"
                    />
            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/feedsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinslight"
                android:layout_marginRight="10dp"
                    android:text="@string/feeds"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </LinearLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <LinearLayout
            android:transitionName="navButtons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/navButtons"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp">

            <ImageView
                android:id="@+id/favouriteImgBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/icon_metro_heart"
                app:tint="#E6E6E6" />

            <ImageView
                android:id="@+id/downloadImgBtn"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/icon_feather_download"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/favourite"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#E6E6E6"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:transitionName="grid"
        android:id="@+id/AllFeedsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navBar"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="17dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/goViewStatus"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_bias="0"
        android:layout_marginLeft="@dimen/_17sdp"
        android:layout_marginStart="@dimen/_17sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navBar"
        android:layout_marginRight="@dimen/_17sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_17sdp">
        <ImageView
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sad_tear"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/goViewStatusTitle"
            android:id="@+id/goViewStatusIMG"/>
        <TextView
            android:id="@+id/goViewStatusTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_status_found"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goViewStatusIMG"
            app:layout_constraintBottom_toTopOf="@id/goViewStatusSubTitle"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/goViewStatusSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_whatsapp_and_view_status"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goViewStatusTitle"
            app:layout_constraintBottom_toTopOf="@id/goViewStatusAppLogo"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:fontFamily="@font/poppinslight"
            android:textColor="@color/white"/>
        <ImageView
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/goViewStatusAppLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fab_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goViewStatusSubTitle"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/AppNotInstalled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_17sdp"
        android:layout_marginStart="@dimen/_17sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navBar"
        android:layout_marginRight="@dimen/_17sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_17sdp">
        <ImageView
            android:id="@+id/AppNotInstalledIMG"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/AppNotInstalledTitle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fab_icon"/>
        <TextView
            android:id="@+id/AppNotInstalledTitle"
            app:layout_constraintTop_toBottomOf="@id/AppNotInstalledIMG"
            app:layout_constraintBottom_toTopOf="@id/AppNotInstalledSubTitle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whatsapp_not_found"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/AppNotInstalledSubTitle"
            app:layout_constraintTop_toBottomOf="@id/AppNotInstalledIMG"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_install_the_app"
            android:textSize="10sp"
            android:fontFamily="@font/poppinslight"
            android:textColor="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>