<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SavedFragment"
    android:id="@+id/transitionsContainer"
    android:background="@drawable/main_activity_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/emptyerror"
        android:layout_below="@id/navBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navBar">
        <ImageView
            app:layout_constraintVertical_chainStyle="packed"
            android:id="@+id/errorimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/errorText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/sad_tear"
            />
        <TextView
            android:id="@+id/errorText"
            app:layout_constraintTop_toBottomOf="@id/errorimg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/no_downloaded_status_found"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:transitionName="grid"
        android:layout_below="@id/navBar"
        android:id="@+id/DownloadedStatusRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginLeft="@dimen/_17sdp"
        android:layout_marginStart="@dimen/_17sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navBar"
        android:layout_marginRight="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_17sdp" />
    <LinearLayout
        app:layout_constraintVertical_weight="0"
        android:transitionName="navBarTransition"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/DownloadedStatusRecyclerView"
        android:id="@+id/navBar"
        android:layout_marginTop="@dimen/_9sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/allfeedtitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extralight"
                android:text="@string/your"
                android:id="@+id/allTextView"
                android:textStyle="bold"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="@drawable/underline"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/feedsTextView"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinslight"
                android:text="@string/downloads"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </LinearLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/navButtons"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp">

            <ImageView
                android:id="@+id/favouriteImgBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/icon_metro_heart"
                android:tint="#E6E6E6" />
            <ImageView
                android:id="@+id/downloadImgBtn"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/icon_feather_download"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/favourite"
                app:layout_constraintTop_toTopOf="parent"
                android:tint="#00FF32"/>
        </LinearLayout>
    </LinearLayout>

    <com.example.statusify.blur.BlurLayout
        android:visibility="invisible"
        android:id="@+id/blurLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:id="@+id/alertBox"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:background="@drawable/delete_alert_bg">
    <TextView
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/alertTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alertBox_title"
        android:fontFamily="@font/poppins_regular"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>
    <ImageView
        android:layout_marginTop="4dp"
        android:id="@+id/alertIcon"
        android:src="@drawable/delete_alert_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alertTitle"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_23sdp"
        app:layout_constraintTop_toBottomOf="@id/alertIcon">
        <Button
            android:textSize="10sp"
            android:fontFamily="@font/poppinslight"
            android:text="@string/alertBox_cancelbtn"
            android:background="@drawable/delete_alert_box_btn_bg"
            android:id="@+id/alert_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintRight_toLeftOf="@id/alert_delete"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
            android:textSize="10sp"
            android:fontFamily="@font/poppinslight"
            android:background="@drawable/delete_alert_box_btn_bg"
            android:text="@string/alertBox_deletebtn"
            android:id="@+id/alert_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toRightOf="@id/alert_cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>